--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="row">
                         <!-- this is the subheading of left column (top row) -->
                         <div class="col bg-grey">
-                            <h1 class="font-heading font-black">About Ed Sheeran</h1>
+                            <h1 class="font-heading font-black">Welcome to Ed's page</h1>
                         </div>
                     </div>
                     <div class="row">
@@ -136,7 +136,7 @@
                             <img class="d-block w-100" src="assets/images/1.jpg" alt="1st Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://www.nytimes.com/2019/07/22/arts/music/ed-sheeran-collaborations-chart.html</h6>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                             <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://www.eadt.co.uk/news/ed-sheeran-releases-the-afterglow-new-song-6861528</h6>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                             <img class="d-block w-100" src="assets/images/3.jpg" alt="3rd Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://www.nme.com/en_asia/news/music/ed-sheeran-make-return-christmas-present-tomorrow-the-afterglow-2843871</h6>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                             <img class="d-block w-100" src="assets/images/4.jpg" alt="4th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://inews.co.uk/culture/music/ed-sheeran-announces-he-is-to-leave-music-and-social-media-for-a-break-378818</h6>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <img class="d-block w-100" src="assets/images/5.jpg" alt="5th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://oracleoftime.com/facetime-ed-sheeran</h6>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                             <img class="d-block w-100" src="assets/images/6.jpg" alt="6th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://variety.com/2019/music/news/ed-sheeran-5-things-iheartradio-interview-1203266313</h6>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                             <img class="d-block w-100" src="assets/images/7.jpg" alt="7th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://www.metrolyrics.com/news-story-say-hello-to-ed-sheeran.html</h6>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                             <img class="d-block w-100" src="assets/images/8.jpg" alt="8th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h2>Caption Text Here</h2>
+                                    <h6>Image Source: https://www.pmtonline.co.uk/blog/2017/03/24/ed-sheeran-gear-guide</h6>
                                 </div>
                             </div>
                         </div>
