--- a/index.html
+++ b/index.html
@@ -121,10 +121,28 @@
                             <h1 class="font-heading font-black">Welcome to Ed's page</h1>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row about">
                         <!-- this is the main body text of left column (bottom row) -->
-                        <div class="col bg-white">
-                            <p class="font-black font-text">Information about Ed Sheeran goes here!</p>
+                        <div class="col bg-white font-black font-text">
+                            <p>
+                                Ed was born on 17th February 1991 in Halifax..
+                                His Father is Irish, whose family live in County Wexford, Irleand.
+                            </p>
+                            <p>
+                                Ed was raised in Suffolk with his brother Matthew, and attended Thomas Mills High School
+                                in Framlingham.
+
+                                Ed played the guitar from a young age, and was known for singing in Church and Busking in the streets.
+
+                                In 2008 he moved to London, where he attended Academy of Contemporary Music, in Guildford.
+                            </p>
+                            <p>
+                                In 2011 he released his first singles “The A Team”, “You need me, I don’t need you” and “Lego House”.
+ 
+                                Since then, he released his first album - plus in 2011, multiply in 2014, and divide in
+                                2016.  Where 12 of his songs reached Number One in the UK.
+                            </p>
+                            <small class="information-source"> Information Source: https://www.thefamouspeople.com/profiles/ed-sheeran-29882.php</small>
                         </div>
                     </div>
                 </div>
@@ -136,7 +154,9 @@
                             <img class="d-block w-100" src="assets/images/1.jpg" alt="1st Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://www.nytimes.com/2019/07/22/arts/music/ed-sheeran-collaborations-chart.html</h6>
+                                    <h6>Image Source:
+                                        https://www.nytimes.com/2019/07/22/arts/music/ed-sheeran-collaborations-chart.html
+                                    </h6>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +164,9 @@
                             <img class="d-block w-100" src="assets/images/2.jpg" alt="2nd Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://www.eadt.co.uk/news/ed-sheeran-releases-the-afterglow-new-song-6861528</h6>
+                                    <h6>Image Source:
+                                        https://www.eadt.co.uk/news/ed-sheeran-releases-the-afterglow-new-song-6861528
+                                    </h6>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +174,9 @@
                             <img class="d-block w-100" src="assets/images/3.jpg" alt="3rd Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://www.nme.com/en_asia/news/music/ed-sheeran-make-return-christmas-present-tomorrow-the-afterglow-2843871</h6>
+                                    <h6>Image Source:
+                                        https://www.nme.com/en_asia/news/music/ed-sheeran-make-return-christmas-present-tomorrow-the-afterglow-2843871
+                                    </h6>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +184,9 @@
                             <img class="d-block w-100" src="assets/images/4.jpg" alt="4th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://inews.co.uk/culture/music/ed-sheeran-announces-he-is-to-leave-music-and-social-media-for-a-break-378818</h6>
+                                    <h6>Image Source:
+                                        https://inews.co.uk/culture/music/ed-sheeran-announces-he-is-to-leave-music-and-social-media-for-a-break-378818
+                                    </h6>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +202,9 @@
                             <img class="d-block w-100" src="assets/images/6.jpg" alt="6th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://variety.com/2019/music/news/ed-sheeran-5-things-iheartradio-interview-1203266313</h6>
+                                    <h6>Image Source:
+                                        https://variety.com/2019/music/news/ed-sheeran-5-things-iheartradio-interview-1203266313
+                                    </h6>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +212,8 @@
                             <img class="d-block w-100" src="assets/images/7.jpg" alt="7th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://www.metrolyrics.com/news-story-say-hello-to-ed-sheeran.html</h6>
+                                    <h6>Image Source:
+                                        https://www.metrolyrics.com/news-story-say-hello-to-ed-sheeran.html</h6>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +221,8 @@
                             <img class="d-block w-100" src="assets/images/8.jpg" alt="8th Picture of Ed Sheeran">
                             <div class="carousel-caption">
                                 <div>
-                                    <h6>Image Source: https://www.pmtonline.co.uk/blog/2017/03/24/ed-sheeran-gear-guide</h6>
+                                    <h6>Image Source: https://www.pmtonline.co.uk/blog/2017/03/24/ed-sheeran-gear-guide
+                                    </h6>
                                 </div>
                             </div>
                         </div>
