--- a/index.html
+++ b/index.html
@@ -125,19 +125,16 @@
                         <!-- this is the main body text of left column (bottom row) -->
                         <div class="col bg-white font-black font-text">
                             <p>
-                                Ed is a famous singer, who was born on 17th February 1991 in Halifax.
+                                Ed is a famous singer, who was born on 17th February 1991 in Halifax, then raised in Suffolk.
                                 His Father is Irish, whose family live in County Wexford, Irleand.
                             </p>
                             <p>
-                                Ed was raised in Suffolk with his brother Matthew, and attended Thomas Mills High School
-                                in Framlingham.
-
-                                In 2008 he moved to London, where he attended Academy of Contemporary Music, in Guildford.
+                               In 2008 he moved to London, where he attended Academy of Contemporary Music, in Guildford.
                             </p>
                             <p>
                                 In 2011 Ed released his first singles “The A Team”, “You need me, I don’t need you” and “Lego House”.
  
-                                Since then, he released his first album - plus in 2011, multiply in 2014, and divide in
+                                Since then, he has released 3 albums: "Plus" in 2011, "Multiply" in 2014, and "Divide" in
                                 2016.  Where 12 of his songs reached Number One in the UK.
                             </p>
                             <small class="information-source"> Information Source: https://www.thefamouspeople.com/profiles/ed-sheeran-29882.php</small>
