gitpod did not push, so creating changes again and re-pushing

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
     </header>
-    <section class="margin-bottom: 100px">
+    <section style="padding-bottom: 100px">
         <!-- this part below contains the subheading text, main body area, and photo section -->
         <div class="container-fluid no-gutters">
             <div class="row">
