--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
             </div>
         </div>
     </header>
-    <section class="margin-bottom: 100px">
+    <section style="padding-bottom: 100px">
         <!-- this part below contains the subheading text, and main body area -->
         <div class="container-fluid no-gutters">
                         <div class="row">
