--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 <div class="col-1 bg-black">
                 </div>
                 <!-- logo that links to home page -->
-                <a href="index.html" alt="Ed Sheeran" class="col-10 logo">
+                <a href="index.html" class="col-10 logo">
                 </a>
                 <!-- black space on right of logo -->
                 <div class="col-1 bg-black">
