updated readme files - still not complete

--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="subcribe" />
+                                    <input type="checkbox" class="form-check-input" id="subscribe" />
                                     <label class="form-check-label" for="subscribe" style="font-size: 12px;">Check this
                                         box
                                         if you would like to subscribe to our newsletters, and get the lastest
