--- a/music.html
+++ b/music.html
@@ -129,12 +129,11 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <!-- audio control with link to the local media file -->
+                                <!-- audio control with spotify tracks -->
+                                <!-- alternate text in case browser does not support playing mp3s -->
                                 <div class="col spotify">
                                     <iframe src="https://open.spotify.com/embed/track/3PB8iSyxMHfyENnye0v7Sl"
-                                        width="250" height="80" frameborder="0" allowtransparency="true"
-                                        allow="encrypted-media">
-                                        <!-- alternate text in case browser does not support playing mp3s -->
+                                        width="250" height="80" allow="encrypted-media">
                                         Your browser does not support iFrames
                                     </iframe>
                                 </div>
@@ -149,8 +148,7 @@
                             <div class="row">
                                 <div class="col spotify">
                                     <iframe src="https://open.spotify.com/embed/track/5ubHAQtKuFfiG4FXfLP804"
-                                        width="250" height="80" frameborder="0" allowtransparency="true"
-                                        allow="encrypted-media">
+                                        width="250" height="80" allow="encrypted-media">
                                         Your browser does not support iFrames
                                     </iframe>
                                 </div>
@@ -165,8 +163,7 @@
                             <div class="row">
                                 <div class="col spotify">
                                     <iframe src="https://open.spotify.com/embed/track/5tIJb0C5rIbiDijHl41byE"
-                                        width="250" height="80" frameborder="0" allowtransparency="true"
-                                        allow="encrypted-media">
+                                        width="250" height="80" allow="encrypted-media">
                                         Your browser does not support iFrames
                                     </iframe>
                                 </div>
@@ -196,22 +193,30 @@
             <div class="row" id="video-section">
                 <!-- video section which is 2 videos per row, reducing to 1 per row when screen gets smaller -->
                 <!-- alternate text in case browser does not support iFrames -->
-                <iframe class="video col-md-6 col-sm-12" width="600px" height="400px"
-                    src="https://www.youtube.com/embed/iKzRIweSBLA" frameborder="0"
+                <iframe class="video col-md-6 col-sm-12" width="600" height="400"
+                    src="https://www.youtube.com/embed/iKzRIweSBLA"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>Your browser does not support iFrames</iframe>
-                <iframe class="video col-md-6 col-sm-12" width="600px" height="400px"
-                    src="https://www.youtube.com/embed/K0ibBPhiaG0" frameborder="0"
+                    allowfullscreen>
+                    Your browser does not support iFrames
+                </iframe>
+                <iframe class="video col-md-6 col-sm-12" width="600" height="400"
+                    src="https://www.youtube.com/embed/K0ibBPhiaG0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>Your browser does not support iFrames</iframe>
-                <iframe class="video col-md-6 col-sm-12" width="600px" height="400px"
-                    src="https://www.youtube.com/embed/87gWaABqGYs" frameborder="0"
+                    allowfullscreen>
+                    Your browser does not support iFrames
+                </iframe>
+                <iframe class="video col-md-6 col-sm-12" width="600" height="400"
+                    src="https://www.youtube.com/embed/87gWaABqGYs"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>Your browser does not support iFrames</iframe>
-                <iframe class="video col-md-6 col-sm-12" width="600px" height="400px"
-                    src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0"
+                    allowfullscreen>
+                    Your browser does not support iFrames
+                </iframe>
+                <iframe class="video col-md-6 col-sm-12" width="600" height="400"
+                    src="https://www.youtube.com/embed/JGwWNGJdvx8"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>Your browser does not support iFrames</iframe>
+                    allowfullscreen>
+                    Your browser does not support iFrames
+                </iframe>
             </div>
         </div>
     </section>
